--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19875,3 +19875,19 @@ label.panel-block:hover {
   left: 0;
 }
 
+.message ul li {
+  max-width: 725px;
+  list-style-type: none;
+  position: relative;
+}
+
+.message ul li:after {
+  content: '';
+  position: absolute;
+  background: black;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+}
+
