--- a/resources/assets/sass/_chat.scss
+++ b/resources/assets/sass/_chat.scss
@@ -14,3 +14,19 @@
     }
   }
 }
+.message{
+  ul li {
+    max-width: 725px;
+    list-style-type: none;
+    position:relative;
+    &:after{
+      content:'';
+      position:absolute;
+      background:black;
+      width:100%;
+      height:2px;
+      bottom:0;
+      left:0;
+    }
+  }
+}
