Fix last commit(again).

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19859,35 +19859,8 @@ label.panel-block:hover {
   padding: 3rem 1.5rem 6rem;
 }
 
-.chat ul li {
-  max-width: 725px;
-  list-style-type: none;
-  position: relative;
-}
-
-.chat ul li:after {
-  content: '';
-  position: absolute;
-  background: black;
-  width: 100%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-}
-
-.message ul li {
-  max-width: 725px;
-  list-style-type: none;
-  position: relative;
-}
-
-.message ul li:after {
-  content: '';
-  position: absolute;
-  background: black;
-  width: 100%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
+.panel-override-body {
+  padding: 15px;
+  word-wrap: break-word;
 }
 
