--- a/resources/assets/sass/_chat.scss
+++ b/resources/assets/sass/_chat.scss
@@ -1,32 +1,4 @@
-.chat{
-  ul li {
-    max-width: 725px;
-    list-style-type: none;
-    position:relative;
-    &:after{
-      content:'';
-      position:absolute;
-      background:black;
-      width:100%;
-      height:2px;
-      bottom:0;
-      left:0;
-    }
-  }
-}
-.message{
-  ul li {
-    max-width: 725px;
-    list-style-type: none;
-    position:relative;
-    &:after{
-      content:'';
-      position:absolute;
-      background:black;
-      width:100%;
-      height:2px;
-      bottom:0;
-      left:0;
-    }
-  }
+.panel-override-body{
+  padding: 15px;
+  word-wrap: break-word;
 }
