--- a/resources/assets/sass/_chat.scss
+++ b/resources/assets/sass/_chat.scss
@@ -2,3 +2,16 @@
   padding: 15px;
   word-wrap: break-word;
 }
+
+.user_login{
+  color: red;
+  background-color: lightblue;
+  border: 1px solid black;
+  text-align: center;
+  border-radius: 3px 3px 3px 3px;
+  list-style-type: none;
+}
+
+.user_message{
+  list-style-type: none;
+}
